manifest-nessus.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nessus
  labels:
    namespace: nessus
spec:
  selector:
    app: nessus
  ports:
  - name: https  
    port: 443
    targetPort: 8834
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nessus
  namespace: nessus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nessus
  template:
    metadata:
      labels:
        app: nessus
    spec:
      containers:
      - name: nessus
        image: docker-registry-default.38.102.183.35.nip.io/nessus/nessus:1.0.0
        resources:
          limits:
            memory: "2G"
            cpu: "2"
          requests:
            memory: "512M"
            cpu: "1"
        securityContext:
            capabilities:
              add:
                - NET_ADMIN
                - NET_RAW
                - SYS_RESOURCE
        ports:
        - containerPort: 8834
      serviceAccountName: nessus
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  labels:
    namespace: nessus
  name: nessus
  namespace: nessus
spec:
  host: nessus-nessus.38.102.183.35.nip.io
  port:
    targetPort: https
  to:
    kind: Service
    name: nessus
    weight: 100
  wildcardPolicy: None
